# trial_llama-prototype

./: .gitignore  0_pull_eligibility_criteria.ipynb  1_summarize_patients.ipynb  3_check_patient_cohort_matches.ipynb  4_finetune_pt_trial_summary_embedding_by_cohort.ipynb  README.md
app_code/: .dockerignore  Dockerfile  README.md  pyproject.toml  template.env
app_code/ai_match_demo/: app.py  common.py  data_store.py  views.py
notebooks/: 2_summarize_ctgov_trials.ipynb  5_train_trial_checker.ipynb
