[tool.poetry]
name = "ai-match-demo"
version = "0.1.0"
description = "A demonstration of new clinical trial matching pipeline"
authors = ["Lindsay, James <jlindsay@ds.dfci.harvard.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
panel = "^1.4.3"
watchfiles = "^0.22.0"
python-dotenv = "^1.0.1"
websockets = "^12.0"
nest-asyncio = "^1.6.0"
google-api-python-client = "^2.132.0"
google-cloud-storage = "^2.16.0"
pyopenssl = "^24.1.0"
ndg-httpsclient = "^0.5.1"
pyasn1 = "^0.6.0"
aiohttp = "^3.9.5"
groq = "^0.9.0"
diskcache = "^5.6.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytrials = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
